# newcomer2023-qrcode-pdf

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg  tokens_sample.csv
logo/: main.py
pdf/: main.py
qr/: main.py
